# smart-agent

./: .gitignore  LICENSE  README.md  TESTING.md  pyproject.toml  run_tests.sh
.github/workflows/: lint.yml  pytests.yml
scripts/: format.sh  lint.sh
src/: story.md  test.csv
src/ollama/: Dockerfile
src/smart_agent/: agent.py  logger.py  logging_setup.py  ollama_health.py  registery.py  registry.py  response.py
src/smart_agent/cli/: __init__.py
src/smart_agent/cli/commands/: info.py  query.py  run.py  tools.py
src/smart_agent/tools/: base_tool.py  csv_tool.py  md_tool.py
tests/: test_ollama_health.py
tests/tools/: test_base_tool.py  test_csv_tool.py  test_md_tool.py
