[project]
name = "smart-agent"
version = "1.0.0"
description = "AI-powered agent for analyzing and processing files using Ollama LLaMA"
authors = [{name = "sagi5060", email = "sagi.shabtai@outlook.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.5.0",
    "aiofiles>=24.0.0", 
    "fastapi>=0.100.0",
    "pandas>=2.0.0",
    "typer>=0.12.0",
    "uvicorn>=0.30.0"
]

[tool.poetry]
packages = [{include = "smart_agent", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.0.0"
ruff = "^0.12.8"
mypy = "^1.17.1"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project.entry-points."smart_agent.tools"]
csv_tool = "smart_agent.tools.csv_tool:CsvTool"
md_tool = "smart_agent.tools.md_tool:MarkdownTool"

[project.scripts]
smart-agent = "smart_agent.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=src", "--cov-report=term-missing"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
